--- a/.htaccess
+++ b/.htaccess
@@ -7,11 +7,11 @@ Options All -Indexes
 # --------------------------------------------------------------------------
 # Pagina por defectos
 # --------------------------------------------------------------------------
-DirectoryIndex index.prg main.prg
+#DirectoryIndex index.prg main.prg
 
-<IfModule mod_rewrite.c>
-	RewriteEngine on
-	RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteCond %{REQUEST_FILENAME} !-d
-	RewriteRule ^(.*)$ index.prg/$1 [L]
-</IfModule>
+#<IfModule mod_rewrite.c>
+#	RewriteEngine on
+#	RewriteCond %{REQUEST_FILENAME} !-f
+#	RewriteCond %{REQUEST_FILENAME} !-d
+#	RewriteRule ^(.*)$ index.prg/$1 [L]
+#</IfModule>
