--- a/apps/so/.htaccess
+++ b/apps/so/.htaccess
@@ -1,8 +1,9 @@
 # --------------------------------------------------------------------------
 # Load init process...
 # --------------------------------------------------------------------------
-#SetEnv MH_INITPROCESS 	../lib/mercury.hrb,../lib/mercury.ch
-SetEnv MH_INITPROCESS 	../../lib/mercury.ch
+#SetEnv MH_INITPROCESS 		../lib/mercury.hrb,../lib/mercury.ch
+SetEnv MH_INITPROCESS 		../../lib/mercury.ch
+SetEnv MH_MINIMALVERSION 	2.1.005
 
 # --------------------------------------------------------------------------
 # Impedir que lean los ficheros del directorio
